@startuml
!pragma layout smetana
title Domain Model
footer petclinic-backend/docs/generated/DomainModel.puml
hide empty members
skinparam classAttributeIconSize 0
caption <color:red>red</color> = added · <color:red><s>struck</s></color> = removed (vs previous snapshot)

class Owner {
  id : Integer
  firstName : String
  lastName : String
  address : String
  city : String
  telephone : String
}
class Pet {
  id : Integer
  name : String
  birthDate : LocalDate
}
class PetType {
  id : Integer
  name : String
}
class Role {
  id : Integer
  name : String
}
class Specialty {
  id : Integer
  name : String
  description : String
}
class User {
  username : String
  password : String
  enabled : Boolean
}
class Vet {
  id : Integer
  firstName : String
  lastName : String
  <color:red>phone : String</color>
}
class Visit {
  id : Integer
  date : LocalDate
  description : String
  <color:red><s>time : LocalTime</s></color>
}

PetType "1" -- "0..*" Pet : type
Owner "1" -- "0..*" Pet : owner
User "1" -- "0..*" Role : user
Vet "0..*" -- "0..*" Specialty : specialties
Pet "1" -- "0..*" Visit : pet
Vet "1" -[#red]- "0..*" Visit : <color:red>vet</color>

@enduml
